# actorizor

./: .coderabbit.yaml  CLAUDE.md  Cargo.toml
.github/workflows/: ci.yml  publish.yml
actor_macro_app/: Cargo.toml
actor_macro_app/src/: main.rs
actor_macro_lib/: Cargo.toml
actor_macro_lib/src/: actorizor.rs  lib.rs  pretty.rs
actorizor/: Cargo.toml  README.md
actorizor-macros/: Cargo.toml
actorizor-macros/src/: actorizor.rs  lib.rs  pretty.rs
actorizor/examples/: basic.rs  constructors.rs  custom_supervisor.rs  generic.rs  generic_supervisor.rs  lifecycle.rs  supervisor.rs
actorizor/src/: actorizor.rs  lib.rs  supervisor.rs
actorizor/tests/: basic.rs  complex_impl.rs  generics.rs  lifecycle.rs  supervision.rs  tracking.rs
actorizor/tests/common/: mod.rs
