[package]
name = "actor_macro_app"
version = "0.1.0"
edition = "2024"

[dependencies]
actorizor = { path = "../actorizor" }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
# Forward to actorizor so the tracking-supervisor tests + the supervisor
# example can run via `cargo test --features tracking` /
# `cargo run --example supervisor --features tracking`.
tracking = ["actorizor/tracking"]

[[example]]
name = "supervisor"
required-features = ["tracking"]
