[package]
name = "actorizor-macros"
version = "0.2.1"
edition = "2024"
# Let-chains require Rust 1.88 (edition 2024 alone only implies 1.85).
rust-version = "1.88"
description = "Proc-macro implementation for the actorizor crate. Don't depend on this directly — depend on `actorizor` instead."
repository = "https://github.com/SigilVault/actorizor"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.10.0"
proc-macro2 = "1.0.103"
quote = "1.0.41"
syn = { version = "2.0.108", features = ["full"] }

[features]
diagout = []
