[package]
name = "actorizor"
version = "0.1.1"
edition = "2024"
description = "Simple macro based actor framework for Tokio-based apps"
repository = "https://github.com/SigilVault/actorizor"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.10.0"
proc-macro2 = "1.0.103"
quote = "1.0.41"
syn = { version = "2.0.108", features = ["full"] }

[features]
diagout = []
