[package]
name = "actorizor"
version = "0.2.0"
edition = "2024"
description = "Simple macro based actor framework for Tokio-based apps"
repository = "https://github.com/SigilVault/actorizor"
license = "Apache-2.0"

[dependencies]
actorizor-macros = { version = "=0.2.0", path = "../actorizor-macros" }
tokio = { version = "1", features = ["macros", "rt", "sync"] }
tracing = "0.1"

[dev-dependencies]
thiserror = "2"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = []
# Enables `TrackingSupervisor` — a name-keyed registry that watches actor
# tasks, emits a `tracing` event on exit/panic, and exposes
# alive_count/snapshot/abort_by_name/abort_by_id/abort_all controls. The
# bare `Supervisor` trait and `TokioSpawn` are always available.
tracking = []
# Forwards to actorizor-macros — emits the pretty-printed macro expansion at
# compile time for debugging. Not user-facing.
diagout = ["actorizor-macros/diagout"]

# The supervisor example exercises TrackingSupervisor + tracing output.
[[example]]
name = "supervisor"
required-features = ["tracking"]
